--- a/templates/zinnia/_entry_detail_base.html
+++ b/templates/zinnia/_entry_detail_base.html
@@ -1,5 +1,5 @@
 {% load comments i18n zinnia_tags %}
-{% if not object.login_required %}
+{% if not object.login_required or request.user.is_authenticated %}
 <div id="entry-{{ object.pk }}" class="hentry{% if object.featured %} featured{% endif %}">
   {% block entry-header %}
   <div class="entry-header">
